<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gender_man"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:gravity="center"
        android:text="@string/man"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/gray_f1" />

    <TextView
        android:id="@+id/gender_women"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:gravity="center"
        android:text="@string/women"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/gray_f1" />

    <TextView
        android:id="@+id/gender_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="@dimen/sp_15" />

</LinearLayout>