<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dingshi.com.hibook.MainActivity">

    <RelativeLayout
        android:id="@+id/main_controller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_tab1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <dingshi.com.hibook.view.BottomBarItem
        android:id="@+id/main_tab1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        app:bottom_text="@string/tab1"
        app:focus_color="@color/black"
        app:focus_icon="@drawable/main_home_focus"
        app:icon_size="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/main_tab2"
        app:normal_color="@color/gray_a5"
        app:normal_icon="@drawable/main_home_normal"
        app:text_size="3sp" />


    <dingshi.com.hibook.view.BottomBarItem
        android:id="@+id/main_tab2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        app:bottom_text="@string/tab2"
        app:focus_color="@color/black"
        app:focus_icon="@drawable/main_lib_focus"
        app:icon_size="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_tab1"
        app:layout_constraintRight_toLeftOf="@+id/main_tab3"
        app:normal_color="@color/gray_a5"
        app:normal_icon="@drawable/main_lib_normal"
        app:text_size="3sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_tab2"
        app:layout_constraintRight_toLeftOf="@+id/main_tab4" />

    <dingshi.com.hibook.view.BottomBarItem
        android:id="@+id/main_tab3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:bottom_text="@string/tab3"
        app:focus_color="@color/black"
        app:focus_icon="@drawable/main_zxing"
        app:icon_size="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toRightOf="@+id/main_tab2"
        app:layout_constraintRight_toLeftOf="@+id/main_tab4"
        app:normal_color="@color/black"
        app:normal_icon="@drawable/main_zxing"
        app:text_size="3dp" />

    <dingshi.com.hibook.view.BottomBarItem
        android:id="@+id/main_tab4"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        app:bottom_text="@string/tab4"
        app:focus_color="@color/black"
        app:focus_icon="@drawable/main_msg_focus"
        app:icon_size="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_tab3"
        app:layout_constraintRight_toLeftOf="@+id/main_tab5"
        app:normal_color="@color/gray_a5"
        app:normal_icon="@drawable/main_msg_normal"
        app:text_size="3sp" />

    <dingshi.com.hibook.view.BottomBarItem
        android:id="@+id/main_tab5"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/white"
        app:bottom_text="@string/tab5"
        app:focus_color="@color/black"
        app:focus_icon="@drawable/main_my_focus"
        app:icon_size="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/main_tab4"
        app:layout_constraintRight_toRightOf="parent"
        app:normal_color="@color/gray_a5"
        app:normal_icon="@drawable/main_my_normal"
        app:text_size="3sp" />

    <TextView
        android:id="@+id/main_unread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shap_read"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="@id/main_tab4"
        app:layout_constraintTop_toTopOf="@id/main_tab4" />

</android.support.constraint.ConstraintLayout>
