<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dingshi.com.hibook.ui.EvalBookActivity">

    <TextView
        android:id="@+id/eval_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/eval_book"
        android:textColor="@color/black_3f"
        android:textSize="@dimen/sp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/eval_book_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.5"
        android:theme="@style/RatingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eval_book_title" />

    <EditText
        android:id="@+id/eval_book_content"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_150"
        android:layout_margin="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/circle_gray_90"
        android:gravity="start|top"
        android:hint="@string/eval_book_hint"
        android:maxLength="300"
        android:padding="10dp"
        android:textColor="@color/black_90"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eval_book_rating"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/eval_book_submit"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_45"
        android:layout_margin="@dimen/dp_30"
        android:background="@drawable/shap_black_7"
        android:gravity="center"
        android:text="@string/eval_book_submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
